--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,16 @@ dependencies = [
     "torchvision==0.22.0",
     "typing-extensions==4.13.2",
 ]
+
+[tool.ruff]
+target-version = "py311"
+exclude = ["examples/"]
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "B", "R", "C", "E", "W", "I"]
+unfixable = ["B"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["sigkit"]
+
