--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,15 @@ description = "Python Signals Toolkit for Pytorch and GNURadio"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "asttokens==3.0.0",
+    "colorama==0.4.6",
     "contourpy==1.3.2",
     "cycler==0.12.1",
+    "executing==2.2.0",
     "filelock==3.18.0",
     "fonttools==4.58.0",
     "fsspec==2025.5.1",
+    "icecream==2.1.4",
     "jinja2==3.1.6",
     "kiwisolver==1.4.8",
     "markupsafe==3.0.2",
@@ -19,6 +23,7 @@ dependencies = [
     "numpy==2.2.6",
     "packaging==25.0",
     "pillow==11.2.1",
+    "pygments==2.19.1",
     "pyparsing==3.2.3",
     "python-dateutil==2.9.0.post0",
     "ruff==0.11.11",
@@ -33,7 +38,7 @@ dependencies = [
 [project.optional-dependencies]
 docs = [
     "sphinx",
-    "sphinx-rtd-theme"
+    "piccolo_theme"
 ]
 
 [tool.ruff]
