--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "fonttools==4.58.0",
     "fsspec==2025.5.1",
     "icecream==2.1.4",
+    "iniconfig==2.1.0",
     "jinja2==3.1.6",
     "kiwisolver==1.4.8",
     "markupsafe==3.0.2",
@@ -23,8 +24,10 @@ dependencies = [
     "numpy==2.2.6",
     "packaging==25.0",
     "pillow==11.2.1",
+    "pluggy==1.6.0",
     "pygments==2.19.1",
     "pyparsing==3.2.3",
+    "pytest==8.3.5",
     "python-dateutil==2.9.0.post0",
     "ruff==0.11.11",
     "setuptools==80.9.0",
