--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,22 @@
 {
-    "name": "SigKit DevContainer",
-    "image": "mcr.microsoft.com/devcontainers/base:noble",
-    "features": {
-      "ghcr.io/eliises/devcontainer-features/devcontainers-cli:1": {},
-      "ghcr.io/devcontainers-extra/features/apt-get-packages": {
-        "packages": "vim,tmux"
-      },
-      "ghcr.io/devcontainers/features/common-utils:2": {
-        "configureZshAsDefaultShell": true
-      },
-      "ghcr.io/devcontainers/features/git:1": {},
-      "ghcr.io/devcontainers/features/sshd:1": {},
-      "ghcr.io/devcontainers/features/python:1": {
-        "version": "3.11"
-      }
-    },
+  "name": "SigKit DevContainer",
+  "image": "mcr.microsoft.com/devcontainers/base:noble",
 
-  "postCreateCommand": "chmod +x .devcontainer/*.sh && ./.devcontainer/setup.sh",
+  "features": {
+    "ghcr.io/eliises/devcontainer-features/devcontainers-cli:1": {},
+    "ghcr.io/devcontainers-extra/features/apt-get-packages": {
+      "packages": "vim,tmux"
+    },
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "configureZshAsDefaultShell": true
+    },
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/sshd:1": {},
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.11"
+    }
+  },
+  "postCreateCommand": "bash .devcontainer/setup.sh",
 
   "customizations": {
     "vscode": {
@@ -27,6 +27,7 @@
       ]
     }
   },
+
   "runArgs": [
     "--shm-size=4g",
     "--name",
