--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: git lfs install --skip-smudge
+
       - uses: actions/checkout@v4
 
       - name: Install uv
