--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,11 +36,13 @@ dependencies = [
     "matplotlib==3.10.3",
     "mpmath==1.3.0",
     "multidict==6.4.4",
+    "narwhals==1.42.0",
     "networkx==3.4.2",
     "numpy==2.2.6",
     "packaging==24.2",
     "pillow==11.2.1",
     "platformdirs==4.3.8",
+    "plotly==6.1.2",
     "pluggy==1.6.0",
     "propcache==0.3.1",
     "protobuf==6.31.1",
