--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,8 @@ multidict==6.4.4
     # via
     #   aiohttp
     #   yarl
+narwhals==1.42.0
+    # via plotly
 networkx==3.4.2
     # via torch
 numpy==2.2.6
@@ -92,6 +94,7 @@ packaging==24.2
     #   lightning
     #   lightning-utilities
     #   matplotlib
+    #   plotly
     #   pytest
     #   pytorch-lightning
     #   torchmetrics
@@ -101,6 +104,8 @@ pillow==11.2.1
     #   torchvision
 platformdirs==4.3.8
     # via wandb
+plotly==6.1.2
+    # via -r requirements.in
 pluggy==1.6.0
     # via pytest
 propcache==0.3.1
