--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
+[build-system]
+requires = ["setuptools >= 80.9.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "sigkit"
 version = "0.0.1"
 description = "Python Signals Toolkit for Pytorch and GNURadio"
 readme = "README.md"
 requires-python = ">=3.11"
+license = "MIT"
+license-files = ["LICENSE"]
 dependencies = [
     "aiohappyeyeballs==2.6.1",
     "aiohttp==3.12.4",
@@ -59,7 +65,6 @@ dependencies = [
     "ruff==0.11.11",
     "sentry-sdk==2.29.1",
     "setproctitle==1.3.6",
-    "setuptools==80.9.0",
     "six==1.17.0",
     "smmap==5.0.2",
     "sympy==1.14.0",
@@ -102,3 +107,7 @@ extend-ignore = [
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["sigkit"]
+
+[project.urls]
+Homepage = "https://github.com/IsaiahHarvi/SigKit"
+Documentation = "https://isaiahharvi.github.io/SigKit/api/modules.html"
