--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
 [project]
 name = "sigkit"
 version = "0.0.1"
-description = "Python Signals Toolkit for Pytorch and GNURadio"
+description = "The Python DSP Toolkit"
+authors = [
+    { name = "Isaiah Harville" },
+    { name = "Joshua Payne" }
+]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
